# adaptive-cruise-control-PID

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  requirements.txt
app/: app.py
docs/: README.md  physics_model.md  pid_theory.md  system_diagram.md  tuning_guide.md
include/: pid_controller.hpp  vehicle.hpp
scripts/: visualization.py
src/: main.cpp  pid_controller.cpp  pid_controller.hpp  vehicle.cpp
